# dfhack

./: .gitmodules  CMakeLists.txt  NEWS  Readme.rst
depends/lua/: CMakeLists.txt
depends/lua/include/: lfs.h  lualib.h
depends/lua/src/: lapi.c  lfs.c  linit.c  lobject.c  luaconf.h
depends/protobuf/: CMakeLists.txt
plugins/: CMakeLists.txt  catsplosion.cpp  check-dfhack-init.cpp  command-prompt.cpp  computer.cpp  designation-history.cpp  embark-tools.cpp  load-screen.cpp  manipulator.cpp  nestbox-guard.cpp  select-area.cpp  tweak.cpp  uicommon.h
plugins/devel/: CMakeLists.txt  renderer-msg.cpp
plugins/lua/: computer.lua  designation-history.lua
plugins/rendermax/: renderer_opengl.hpp  rendermax.cpp
plugins/select-area/: CMakeLists.txt  select-area.cpp  select-area.h
plugins/tweak/: tweak.cpp
scripts/: adaptation.rb  lua.lua
scripts/gui/: prerelease-warning.lua
